# djinx

./: .gitignore  .pre-commit-config.yaml  .readthedoc.yaml  CHANGELOG.md  FRAGMENTS.md  LICENCE.md  MANIFEST.in  README.md  Readme.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml
djinx/: MANIFEST.in  README.md  setup.py
djinx/djinx/: apps.py  settings.py
djinx/djinx/views/: base.py  djinx.py
djxi/: MANIFEST.in  README.md  apps.py  setup.cfg  setup.py
djxi/actions/: base.py
djxi/actions/tests/: test_dxview_mixin.py
djxi/djxi/: apps.py
djxi/tests/: dx_view_mixin.py  test_dxview_mixin.py
docs/: Makefile
example/: requirements.in
example/config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
example/config/views/: base.py  djinx.py  parser.py
example/example/: settings.py  urls.py
example/showcases/: apps.py  urls.py  views.py
example/showcases/actions/: parameter.py  simple.py  todo.py
example/static/: htmx.js
example/templates/: base.html  index.html
example/templates/showcases/: list.html
example/templates/showcases/sections/: counter.html
example/templates/todo/: list.html
example/todo/: admin.py  apps.py  models.py  urls.py  views.py
example/todo/migrations/: 0001_initial.py
src/djact/: apps.py
src/djact/actions/: parser.py  router.py
src/djact/templatetags/: djact.py
src/djxi/: __init__.py  apps.py  conf.py  endpoint.py  error.py  loader.py  messages.py  parser.py  router.py  section.py
src/djxi/actions/: __init__.py  base.py  endpoint.py  messages.py  parser.py  route.py  router.py  section.py
src/djxi/djxi/: apps.py  settings.py
src/djxi/static/: htmx_v2.js  htmx_v4.js
src/djxi/templates/: htmx_headers.html  htmx_script.html
src/djxi/templates/djxi/: htmx_script.html
src/djxi/templates/djxi/messages/: message_container.html  message_item.html  message_list.html
src/djxi/templates/messages/: message.html
src/djxi/templatetags/: djxi.py
src/djxi/tests/: test_dxview_mixin.py
src/tests/: conftest.py  test_actions.py  test_compat.py  test_dx_include.py  test_dxview_mixin.py  test_endpoints.py  test_messages.py  test_parser.py  test_routing.py  test_routing_shortcuts.py  test_settings.py  test_setup_tags.py  test_template_compat.py
src/tests/data/: partial.html  template.html
