[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djxi"
version = "0.1.1"
description = "Django HTMX Integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Philipp Rollinger", email = "philipp.rollinger@protonmail.com" }
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "black>=23.0.0",
    "ruff>=0.0.275",
    "pre-commit>=3.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/rollinger/djxi"
Repository = "https://github.com/rollinger/djxi"