# setup.cfg
[metadata]
name = djxi
version = 0.1.1
description = Django HTMX Integration
long_description = file: README.md
long_description_content_type = text/markdown
author = Philipp Rollinger
author_email = philipp.rollinger@protonmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django

[options]
packages = find:
include_package_data = True
install_requires =
    django>=4.2

[options.extras_require]
dev =
    pytest
    black
